--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,20 @@
-﻿// this the manifest for you pack
-// it contains basic information about your pack
-// for more info on the manifest check: https://github.com/black-sliver/PopTracker/blob/master/doc/PACKS.md#manifest
-{
+﻿{
     "name": "Reventure Endings Tracker",
     "game_name": "Reventure",
-    "package_version": "1.1.4",
-    "package_uid": "fhnReventure",
-    "author": "fhnnhf",
+    "package_version": "2.0.0",
+    "package_uid": "ap-reventure",
+    "author": "palex00 & fhnnhf",
     "variants": {
         "standard": {
             "display_name": "Map Tracker",
             "flags": [
-                "ap" //enables AP autotracking interface - remove if not needed
+                "ap"
             ]
         },
         "var_itemsonly": {
             "display_name": "Items Only",
             "flags": [
-                "ap" //enables AP autotracking interface - remove if not needed
+                "ap"
             ]
         }
     }
